--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
-    "swiper": "^6.3.5",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.2.0"
